grep: use errno consistently in write diagnostics

Feature request and initial version reported by Assaf Gordon in:
http://bugs.gnu.org/23031
* NEWS: Document this.
* src/grep.c: Include <stdarg.h>.
(stdout_errno): New static var.
(write_error_seen): Remove; superseded by stdout_errno.
All uses changed.
(putchar_errno, fputs_errno, printf_errno, fwrite_errno)
(fflush_errno): New static functions.
(print_filename, print_sep, print_offset, print_line_head)
(print_line_middle, print_line_tail, prline, prtext, grep)
(grepdesc): Use them.
* tests/write-error-msg: New file.
* tests/Makefile.am (TESTS): Add it.